@@ -31,11 +31,6 @@ see https://www.gnu.org/licenses/.  */
 #define GMP_LIMB_BITS 64
 #define GMP_LIMB_BYTES 8
 
-#if 0
-#define UMUL_TIME	 519
-#define UDIV_TIME	2360
-#endif
-
 /* T90 Unicos 10.0.X in CFP mode */
 
 /* Generated by tuneup.c, 2004-02-07, system compiler */
